some FindBugs refactorings (partially)