@@ -39,10 +39,10 @@ public class MultiplyIns extends InstructionDefinition {
         Object o1 = lda.operandStack.pop();
         Object o2 = lda.operandStack.pop();
         if ((o1 instanceof Long) && ((o2 instanceof Long))) {
-            Long ret = new Long(((Long) o1).longValue() * ((Long) o2).longValue());
+            Long ret = Long.valueOf(((Long) o1).longValue() * ((Long) o2).longValue());
             lda.operandStack.push(ret);
         } else if ((o1 instanceof Double) && ((o2 instanceof Double))) {
-            Double ret = new Double(((Double) o1).doubleValue() * ((Double) o2).doubleValue());
+            Double ret = Double.valueOf(((Double) o1).doubleValue() * ((Double) o2).doubleValue());
             lda.operandStack.push(ret);
         } else if ((o1 instanceof Long) && ((o2 instanceof Double))) {
             Double ret = new Double(((Long) o1).longValue() * ((Double) o2).doubleValue());
