@@ -37,7 +37,7 @@ public class BitNotIns extends InstructionDefinition {
     @Override
     public void execute(LocalDataArea lda, ConstantPool constants, List<Object> arguments) {
         Long value = (Long) lda.operandStack.pop();
-        Long ret = new Long(-value.longValue());
+        Long ret = Long.valueOf(-value.longValue());
         lda.operandStack.push(ret);
     }
 
