@@ -61,7 +61,7 @@ public class DecLocalIIns extends InstructionDefinition {
         int regIndex = ins.operands[0];
         output.add(new DecLocalTreeItem(ins, regIndex));
         if (localRegs.containsKey(regIndex)) {
-            localRegs.put(regIndex, new NotCompileTimeTreeItem(ins, new SubtractTreeItem(ins, localRegs.get(regIndex), new IntegerValueTreeItem(ins, new Long(1)))));
+            localRegs.put(regIndex, new NotCompileTimeTreeItem(ins, new SubtractTreeItem(ins, localRegs.get(regIndex), new IntegerValueTreeItem(ins, Long.valueOf(1)))));
         } else {
             //localRegs.put(regIndex, new SubtractTreeItem(ins, new IntegerValueTreeItem(ins, new Long(0)), new IntegerValueTreeItem(ins, new Long(1))));
         }
